[build-system]
requires = ["maturin>=1.9.6,<2.0"]
build-backend = "maturin"

[project]
name = "sfHMM"
description="step-finding-based HMM"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.7.0",
    "pandas>=2.0.0",
    "hmmlearn>=0.3.3",
    "scikit-learn>=1.4.2",
    "matplotlib>=3.10.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
    "**/*.pyi",
    "*.pyi",
]
module-name = "sfHMM._sfhmm_ext"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
himena = [
    "himena>=0.0.8",
    "cmap>=0.6.0",
]

[project.entry-points."himena.plugin"]
Tools = "sfHMM.himena"
